--- a/workshop/exercise-7/index.html
+++ b/workshop/exercise-7/index.html
@@ -1,13 +1,76 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <link href="https://fonts.googleapis.com/css?family=Bangers|Yanone+Kaffeesatz&display=swap" rel="stylesheet">
+  <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Yanone+Kaffeesatz&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Animals</h1>
     <section class="section">
-        <h2>Cute Animals</h2>
-        <!-- Complete the file... -->
+      <h2>Cute Animals</h2>
+      <!-- Complete the file... -->
+      <ul class="row">
+        <li class="col">
+          <h3>Cats</h3>
+          <div class="images">
+            <img class="image" src="./imgs/cat.jpg" alt="cat1" />
+            <img class="image" src="./imgs/cat2.jpeg" alt="cat2" />
+          </div>
+        </li>
+        <li class="col">
+          <h3>Dogs</h3>
+          <div class="images">
+            <img class="image" src="./imgs/dog.jpg" alt="dog1" />
+            <img class="image" src="./imgs/dog2.jpg" alt="dog2" />
+          </div>
+        </li>
+        <li class="col">
+          <h3>An Alpaca</h3>
+          <img class="image" src="./imgs/alpaca.jpg" alt="alpaca" />
+        </li>
+      </ul>
+    </section>
+    <section class="section">
+      <h2>Big Animals</h2>
+      <ul class="row">
+        <li class="col">
+          <h3>An Elephant</h3>
+          <img class="image" src="./imgs/elephant.jpg" alt="an elephant" />
+        </li>
+        <li class="col">
+          <h3>A Giraffe</h3>
+          <img class="image" src="./imgs/giraffe.jpg" alt="a giraffe" />
+        </li>
+        <li class="col">
+          <h3>A Whale and her baby</h3>
+          <img
+            class="image"
+            src="./imgs/whale.jpg"
+            alt="a whale and her baby"
+          />
+        </li>
+      </ul>
+    </section>
+    <section class="section">
+      <h2>Insects</h2>
+      <ul class="row">
+        <li class="col">
+          <h3>A Firefly</h3>
+          <img class="image" src="./imgs/firefly.jpg" alt="a firefly" />
+        </li>
+        <li class="col">
+          <h3>A Ladybug</h3>
+          <img class="image" src="./imgs/ladybug.jpg" alt="a ladybug" />
+        </li>
+        <li class="col">
+          <h3>A Butterfly</h3>
+          <img class="image" src="./imgs/butterfly.jpg" alt="a butterfly" />
+        </li>
+      </ul>
+    </section>
+  </body>
+</html>
